Added dual slot crafting